
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef long u64 ;
struct pt_regs {int tpc; int tnpc; } ;
struct TYPE_2__ {long* xfsr; } ;


 int FP_EX_DIVZERO ;
 int FP_EX_INEXACT ;
 int FP_EX_INVALID ;
 int FP_EX_OVERFLOW ;
 int FP_EX_UNDERFLOW ;
 long FSR_AEXC_SHIFT ;
 long FSR_CEXC_MASK ;
 long FSR_CEXC_SHIFT ;
 long FSR_TEM_MASK ;
 long FSR_TEM_SHIFT ;
 TYPE_1__* current_thread_info () ;

__attribute__((used)) static inline int record_exception(struct pt_regs *regs, int eflag)
{
 u64 fsr = current_thread_info()->xfsr[0];
 int would_trap;


 would_trap = (fsr & ((long)eflag << FSR_TEM_SHIFT)) != 0UL;


 if(would_trap != 0) {
  eflag &= ((fsr & FSR_TEM_MASK) >> FSR_TEM_SHIFT);
  if((eflag & (eflag - 1)) != 0) {
   if(eflag & FP_EX_INVALID)
    eflag = FP_EX_INVALID;
   else if(eflag & FP_EX_OVERFLOW)
    eflag = FP_EX_OVERFLOW;
   else if(eflag & FP_EX_UNDERFLOW)
    eflag = FP_EX_UNDERFLOW;
   else if(eflag & FP_EX_DIVZERO)
    eflag = FP_EX_DIVZERO;
   else if(eflag & FP_EX_INEXACT)
    eflag = FP_EX_INEXACT;
  }
 }







 fsr &= ~(FSR_CEXC_MASK);
 fsr |= ((long)eflag << FSR_CEXC_SHIFT);







 if(would_trap == 0)
  fsr |= ((long)eflag << FSR_AEXC_SHIFT);


 if(would_trap != 0)
  fsr |= (1UL << 14);

 current_thread_info()->xfsr[0] = fsr;




 if(would_trap == 0) {
  regs->tpc = regs->tnpc;
  regs->tnpc += 4;
 }

 return (would_trap ? 0 : 1);
}
